src/objects/Document_Categorisation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To remove hard coding for the categorisation maps in uw_Constants</description>
    <fields>
        <fullName>level_1__c</fullName>
        <description>Bucket_Fields__c</description>
        <label>level 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>level_2__c</fullName>
        <description>Categorisation_2__c</description>
        <label>level 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>level_3__c</fullName>
        <description>Categorisation_3__c</description>
        <label>level 3</label>
        <type>TextArea</type>
    </fields>
    <label>Document Categorisation</label>
</CustomObject>